# pycdoc

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RELINKING.md  pyproject.toml
.github/workflows/: build.yml
examples/: create_cdoc.py  create_cdoc_for_id.py
patches/: libcdoc-python.patch
src/pycdoc/: __init__.py
swig/: pycdoc.i
tests/: test_basic.py  test_integration.py
