[build-system]
requires = ["scikit-build-core>=0.10", "swig>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pycdoc"
version = "0.1.0"
description = "Python bindings for libcdoc - read and write encrypted CDOC containers"
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Madis Väin", email = "madisvain@gmail.com" }
]
keywords = ["cdoc", "encryption", "decryption", "container", "estonia", "id-card", "cdoc2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
ldap = ["ldap3>=2.9"]

[dependency-groups]
dev = ["pytest>=7.0", "bump-my-version>=0.31", "ruff>=0.9"]

[project.urls]
Homepage = "https://github.com/namespace-ee/pycdoc"
Documentation = "https://github.com/namespace-ee/pycdoc"
Repository = "https://github.com/namespace-ee/pycdoc"
Changelog = "https://github.com/namespace-ee/pycdoc/blob/main/CHANGELOG.md"
Issues = "https://github.com/namespace-ee/pycdoc/issues"

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-DBUILD_TOOLS=OFF",
    "-DFRAMEWORK=OFF",
    "-DLIBCDOC_WITH_DOCS=OFF",
]
wheel.install-dir = "pycdoc"
wheel.packages = []
build-dir = "build/{wheel_tag}"
# git submodules are excluded from sdists by default (git archive ignores them)
sdist.include = ["libcdoc/**"]

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "OFF"
BUILD_TOOLS = "OFF"
FRAMEWORK = "OFF"
LIBCDOC_WITH_DOCS = "OFF"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/pycdoc/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CMakeLists.txt"
search = "VERSION {current_version}"
replace = "VERSION {new_version}"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["I001", "RUF022"]
